--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <meta name="robots" content="index, follow"/>
     <link rel="icon" href="/img/favicon.ico">
     <title>Создать себе уникальный сайт теперь доступно каждому</title>
-    <script src="/js/metrics/yandex.js"></script>
-    <script src="/js/metrics/google.js"></script>
+    <!--<script src="/js/metrics/yandex.js"></script>-->
+    <!--<script src="/js/metrics/google.js"></script>-->
   </head>
   <body>
     <noscript>
