--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Создание уникального сайта доступно каждому. +7(999)589-60-82, Создание сайтов под ключ">
-    <meta name="keywords" content="cоздать сайт, cоздать лендинг, landing page, сайт под ключ, сайт для бизнеса,разработка сайта, разработка уникального сайта,уникальный сайт,создать уникальный сайт,создание уникальных сайтов,создать сайт уникальный,уникальный сайт создать">
-    <meta name="author" content="http://uniquesite.ru">
-    <meta name='freelancehunt' content='d0fe4268ed90c9d' />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Создание уникального сайта доступно каждому. +7(999)589-60-82, Создание сайтов под ключ"
+    />
+    <meta
+      name="keywords"
+      content="cоздать сайт, cоздать лендинг, landing page, сайт под ключ, сайт для бизнеса,разработка сайта, разработка уникального сайта,уникальный сайт,создать уникальный сайт,создание уникальных сайтов,создать сайт уникальный,уникальный сайт создать"
+    />
+    <meta name="author" content="//uniquesite.ru" />
+    <meta name="freelancehunt" content="d0fe4268ed90c9d" />
     <meta name="yandex-verification" content="83fe9d82cb50901a" />
-    <meta name="robots" content="index, follow"/>
-    <link rel="icon" href="/img/favicon.ico">
+    <meta name="robots" content="index, follow" />
+    <meta
+      property="og:title"
+      content="Создание уникального сайта доступно каждому"
+    />
+    <meta property="og:type" content="site" />
+    <meta
+      property="og:url"
+      content="Создание сайтов под ключ +7(999)589-60-82"
+    />
+    <meta property="og:image" content="//uniquesite.ru/img/header_bg.jpg" />
+    <link rel="icon" href="/img/favicon.ico" />
     <title>Создать себе уникальный сайт теперь доступно каждому</title>
     <!--<script src="/js/metrics/yandex.js"></script>-->
     <!--<script src="/js/metrics/google.js"></script>-->
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-      <strong>Извените но приложение не работает без JavaScript. Пожалуйста включите JavaScript и повторите.</strong>
+      <strong
+        >We're sorry but app doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong
+      >
+      <strong
+        >Извените но приложение не работает без JavaScript. Пожалуйста включите
+        JavaScript и повторите.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
